--- a/config/game.yml
+++ b/config/game.yml
@@ -1,7 +1,7 @@
 config:
   fullscreen: false
   godmode: false
-  level_start: 4
+  level_start: 1
 levels:
   - enemies:
       Scout: 40
@@ -25,8 +25,10 @@ levels:
     enemy_frequency: 7
     item_limit: 3
   - enemies:
-      Warrior: 20
-      AdvancedScout: 15
+      Warrior: 12
+      AdvancedScout: 5
+      Scout: 20
+      Speeder: 10
     background: level4.png
     asteroid_frequency: 20
     enemy_frequency: 8
